--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
 header h1 {
     font-size: 2em;
     margin-bottom: 10px;
+    color: #2A2A2A;
 }
 
 header p {
@@ -57,18 +58,20 @@ header .short-description {
     transform: scale(1.1);
 }
 
-.social-links i {
+social-links i {
     font-size: 1.5em;
 }
 
 section h2 {
-    color: #0078D7;
+    color: #444444;
     margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
-ul {
-    margin: 0;
-    padding-left: 20px;
+h3 {
+    color: #666666;
+    margin-bottom: 5px;
 }
 
 ul.skills {
@@ -80,10 +83,21 @@ ul.skills {
 }
 
 ul.skills li {
-    background: #e0f7ff;
-    padding: 10px;
-    border-radius: 5px;
-    color: #0078D7;
+    background: #F0F0F0;
+    padding: 10px 15px;
+    border-radius: 8px;
+    color: #333333;
     font-weight: bold;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+ul.skills li:hover {
+    background: #E0E0E0;
+    transform: scale(1.05);
+}
+
+ul {
+    margin: 0;
+    padding-left: 20px;
 }
