--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header .short-description {
     transform: scale(1.1);
 }
 
-social-links i {
+.social-links i {
     font-size: 1.5em;
 }
 
@@ -86,14 +86,14 @@ ul.skills li {
     background: #F0F0F0;
     padding: 10px 15px;
     border-radius: 8px;
-    color: #333333;
-    font-weight: bold;
+    color: #222222;
+    font-weight: normal;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s, transform 0.3s;
 }
 
 ul.skills li:hover {
-    background: #E0E0E0;
+    background: #EAEAEA;
     transform: scale(1.05);
 }
 
